--- a/resources/frontend/src/app/modules/system/role/role.component.html
+++ b/resources/frontend/src/app/modules/system/role/role.component.html
@@ -23,6 +23,8 @@
       <td>
         <a (click)="showModal2(data)">配置菜单</a>
         <nz-divider nzType="vertical"></nz-divider>
+        <a>配置路由</a>
+        <nz-divider nzType="vertical"></nz-divider>
         <a (click)="update(data)">编辑</a>
         <nz-divider nzType="vertical"></nz-divider>
         <a (click)="onDelete(data)">删除</a>
@@ -36,7 +38,7 @@
         <nz-form-item>
           <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="role_name">角色名称</nz-form-label>
           <nz-form-control [nzSm]="16" [nzXs]="24" nzErrorTip="请输入角色名称!">
-            <input nz-input id="role_name" placeholder="角色名称"/>
+            <input nz-input formControlName="role_name" id="role_name" placeholder="角色名称"/>
           </nz-form-control>
         </nz-form-item>
       </form>
@@ -46,15 +48,15 @@
       <button nz-button nzType="primary" (click)="handleOk()">保存</button>
     </div>
   </nz-modal>
-  <nz-modal [(nzVisible)]="isConfigVisible" nzTitle="菜单配置" (nzOnCancel)="handleCancel2()">
+  <nz-modal [nzWidth]="600" [(nzVisible)]="isConfigVisible" nzTitle="菜单配置" (nzOnCancel)="handleCancel2()">
     <div *nzModalContent>
-      <nz-transfer
-        [nzDataSource]="list"
-        nzShowSearch
-        [nzFilterOption]="filterOption"
-        (nzSearchChange)="search($event)"
-        (nzChange)="change($event)"
-      ></nz-transfer>
+<!--      <nz-transfer-->
+<!--        [nzDataSource]="list"-->
+<!--        nzShowSearch-->
+<!--        [nzFilterOption]="filterOption"-->
+<!--        (nzSearchChange)="search($event)"-->
+<!--        (nzChange)="change($event)"-->
+<!--      ></nz-transfer>-->
     </div>
     <div *nzModalFooter>
       <button nz-button nzType="default" (click)="handleCancel2()">关闭</button>
