--- a/resources/frontend/src/app/modules/auth/login/login.component.html
+++ b/resources/frontend/src/app/modules/auth/login/login.component.html
@@ -1,21 +1,21 @@
 <div style="padding-top: 9rem;">
-  <nz-card style="width:330px;margin: 0 auto;" nzTitle="管理系统">
+  <nz-card style="width:330px;margin: 0 auto;" i18n-nzTitle nzTitle="管理系统">
     <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
       <nz-form-item>
-        <nz-form-control nzErrorTip="请输入用户名!">
+        <nz-form-control i18n-nzErrorTip nzErrorTip="请输入用户名!">
           <nz-input-group nzPrefixIcon="user">
-            <input type="text" nz-input formControlName="username" placeholder="用户名"/>
+            <input type="text" nz-input formControlName="username" i18n-placeholder placeholder="用户名"/>
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-control nzErrorTip="请输入密码">
+        <nz-form-control i18n-nzErrorTip nzErrorTip="请输入密码">
           <nz-input-group nzPrefixIcon="lock">
-            <input type="password" nz-input formControlName="password" placeholder="密码"/>
+            <input type="password" nz-input formControlName="password" i18n-placeholder placeholder="密码"/>
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
-      <button nz-button nzBlock class="login-form-button login-form-margin" [nzLoading]="isLoading" [nzType]="'primary'"><i nz-icon nzType="login" nzTheme="outline"></i>登录</button>
+      <button nz-button nzBlock class="login-form-button login-form-margin" [nzLoading]="isLoading" [nzType]="'primary'"><i nz-icon nzType="login" nzTheme="outline"></i><span i18n>登录</span></button>
     </form>
     <div style="text-align: center;">
       <div>ant-zorro</div>
